--- a/about-us.html
+++ b/about-us.html
@@ -169,135 +169,135 @@
                           formalaşdırılmasın auditi</a>
                       </div>
                     </div>
-                    <div class="col-5 p-5 ms-5">
-                      <div class="main-card">
-                        <div class="image-wrapper">
-                          <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
-                        </div>
-                        <div class="text-wrapper p-4">
-                          <div class="card-tag darkgray">
-                            BUSINESS RESILENCE
-                          </div>
-                          <a href="#">
-                            <p class="fs-2 primary my-4 fw-600">
-                              Returning your business
-                            </p>
-                          </a>
 
-                          <br />
-                          <p class="card-info mt-2">
-                            Lorem ipsum dolor sit amet consectetur,
-                            adipisicing elit. Quis, temporibus?
-                          </p>
-                        </div>
+                    <div class="main-card">
+                      <div class="image-wrapper">
+                        <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
                       </div>
+                      <div class="text-wrapper p-4">
+                        <div class="card-tag darkgray">
+                          BUSINESS RESILENCE
+                        </div>
+                        <a href="#">
+                          <p class="fs-2 primary my-4 fw-600">
+                            Returning your business
+                          </p>
+                        </a>
+
+                        <br />
+                        <p class="card-info mt-2">
+                          Lorem ipsum dolor sit amet consectetur,
+                          adipisicing elit. Quis, temporibus?
+                        </p>
+                      </div>
+                    </div>
+                  </div> -->
+                </div>
+                <div class="col-9 tax-menu sub-menu gray-bg d-flex d-none">
+                  <div class="col-7">
+                    <div class="wrapper d-flex flex-column align-items-start px-5 ms-5">
+                      <p class="title mt-1">Vergi xidmətləri</p>
+                      <a href="./services-tax-1.html" class="primary hover-cc">Vergi auditi
+                        xidmətləri</a>
+                      <a href="./services-tax-2.html" class="primary hover-cc">Vergi məsləhət
+                        xidmətləri</a>
+                      <a href="./services-tax-3.html" class="primary hover-cc">Vergi
+                        planlaması xidmətləri</a>
+                      <a href="./services-tax-4.html" class="primary hover-cc">Vergi sahəsində
+                        sair xidmətlər</a>
                     </div>
                   </div>
-                  <div class="col-9 tax-menu sub-menu gray-bg d-flex d-none">
-                    <div class="col-7">
-                      <div class="wrapper d-flex flex-column align-items-start px-5 ms-5">
-                        <p class="title mt-1">Vergi xidmətləri</p>
-                        <a href="./services-tax-1.html" class="primary hover-cc">Vergi auditi
-                          xidmətləri</a>
-                        <a href="./services-tax-2.html" class="primary hover-cc">Vergi məsləhət
-                          xidmətləri</a>
-                        <a href="./services-tax-3.html" class="primary hover-cc">Vergi
-                          planlaması xidmətləri</a>
-                        <a href="./services-tax-4.html" class="primary hover-cc">Vergi sahəsində
-                          sair xidmətlər</a>
+                  <div class="col-5 p-5 ms-5">
+                    <div class="main-card">
+                      <div class="image-wrapper">
+                        <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
                       </div>
-                    </div>
-                    <div class="col-5 p-5 ms-5">
-                      <div class="main-card">
-                        <div class="image-wrapper">
-                          <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
+                      <div class="text-wrapper p-4">
+                        <div class="card-tag darkgray">
+                          BUSINESS RESILENCE
                         </div>
-                        <div class="text-wrapper p-4">
-                          <div class="card-tag darkgray">
-                            BUSINESS RESILENCE
-                          </div>
-                          <a href="#">
-                            <p class="fs-2 primary my-4 fw-600">
-                              Returning your business
-                            </p>
-                          </a>
-
-                          <br />
-                          <p class="card-info mt-2">
-                            Lorem ipsum dolor sit amet consectetur,
-                            adipisicing elit. Quis, temporibus?
+                        <a href="#">
+                          <p class="fs-2 primary my-4 fw-600">
+                            Returning your business
                           </p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-9 assurance-menu sub-menu gray-bg d-flex">
-                    <div class="col-7">
-                      <div class="wrapper d-flex flex-column align-items-start px-5 ms-5">
-                        <p class="title mt-1">Muhasibatlıq xidmətləri</p>
-                        <a href="./services-accountment-2.html" class="primary hover-cc">Maliyyə
-                          uçotunun üzrə autsors
-                          xidmətləri</a>
-                        <a href="./services-accountment-1.html" class="primary hover-cc">Muhasibat uçotunun üzrə autsors
-                          xidməti</a>
+                        </a>
 
-                        <a href="./services-accountment-3.html" class="primary hover-cc">Şirkət
-                          rəhbərliyinə xərclər və
-                          gəlirlilik haqqında
-                          hesabatların hazırlanması</a>
+                        <br />
+                        <p class="card-info mt-2">
+                          Lorem ipsum dolor sit amet consectetur,
+                          adipisicing elit. Quis, temporibus?
+                        </p>
                       </div>
                     </div>
-                    <div class="col-5 p-5 ms-5">
-                      <div class="main-card">
-                        <div class="image-wrapper">
-                          <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
-                        </div>
-                        <div class="text-wrapper p-4">
-                          <div class="card-tag darkgray">
-                            BUSINESS RESILENCE
-                          </div>
-                          <a href="#">
-                            <p class="fs-2 primary my-4 fw-600">
-                              Returning your business
-                            </p>
-                          </a>
-
-                          <br />
-                          <p class="card-info mt-2">
-                            Lorem ipsum dolor sit amet consectetur,
-                            adipisicing elit. Quis, temporibus?
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-9 advisory-menu gray-bg d-flex d-none">
-                    <div class="col-7">
-                      <div class="wrapper d-flex flex-column align-items-start px-5 ms-5"></div>
-                    </div>
-                    <div class="col-5 p-5 ms-5"></div>
                   </div>
                 </div>
+                <div class="col-9 assurance-menu sub-menu gray-bg d-flex">
+                  <div class="col-7">
+                    <div class="wrapper d-flex flex-column align-items-start px-5 ms-5">
+                      <p class="title mt-1">Muhasibatlıq xidmətləri</p>
+                      <a href="./services-accountment-2.html" class="primary hover-cc">Maliyyə
+                        uçotunun üzrə autsors
+                        xidmətləri</a>
+                      <a href="./services-accountment-1.html" class="primary hover-cc">Muhasibat uçotunun üzrə autsors
+                        xidməti</a>
 
-                <a href="#" class="primary hover-cc menu-act" data-show="industries">
-                  Sahələr
-                </a>
-                <div class="menu industries d-flex" data-toggle="services-menu">
-                  <div class="col-3 lightgray-bg menu-nav-left">
-                    <div class="wrapper d-flex flex-column align-items-center px-5">
-                      <a href="tehsil.html" class="primary hover-cc mt-3">Təhsil</a>
-                      <a href="otel-turizm.html" class="primary hover-cc">Hotel və Turizm</a>
-                      <a href="istehsalat.html" class="primary hover-cc">İstehsalat sahəsi</a>
-                      <a href="maliye.html" class="primary hover-cc">Maliyyə qurumları</a>
-                      <a href="kend-teserufat.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
-                      <a href="tikinti.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-                      <a href="ticaret.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                      <a href="xestexana.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
+                      <a href="./services-accountment-3.html" class="primary hover-cc">Şirkət
+                        rəhbərliyinə xərclər və
+                        gəlirlilik haqqında
+                        hesabatların hazırlanması</a>
                     </div>
                   </div>
+                  <div class="col-5 p-5 ms-5">
+                    <div class="main-card">
+                      <div class="image-wrapper">
+                        <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
+                      </div>
+                      <div class="text-wrapper p-4">
+                        <div class="card-tag darkgray">
+                          BUSINESS RESILENCE
+                        </div>
+                        <a href="#">
+                          <p class="fs-2 primary my-4 fw-600">
+                            Returning your business
+                          </p>
+                        </a>
 
-                  <div class="col-9 sub-menu gray-bg d-flex d-none"></div>
-                  <!-- <div
+                        <br />
+                        <p class="card-info mt-2">
+                          Lorem ipsum dolor sit amet consectetur,
+                          adipisicing elit. Quis, temporibus?
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-9 advisory-menu gray-bg d-flex d-none">
+                  <div class="col-7">
+                    <div class="wrapper d-flex flex-column align-items-start px-5 ms-5"></div>
+                  </div>
+                  <div class="col-5 p-5 ms-5"></div>
+                </div>
+            </div>
+
+            <a href="#" class="primary hover-cc menu-act" data-show="industries">
+              Sahələr
+            </a>
+            <div class="menu industries d-flex" data-toggle="services-menu">
+              <div class="col-3 lightgray-bg menu-nav-left">
+                <div class="wrapper d-flex flex-column align-items-center px-5">
+                  <a href="tehsil.html" class="primary hover-cc mt-3">Təhsil</a>
+                  <a href="otel-turizm.html" class="primary hover-cc">Hotel və Turizm</a>
+                  <a href="istehsalat.html" class="primary hover-cc">İstehsalat sahəsi</a>
+                  <a href="maliye.html" class="primary hover-cc">Maliyyə qurumları</a>
+                  <a href="kend-teserufat.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
+                  <a href="tikinti.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
+                  <a href="ticaret.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
+                  <a href="xestexana.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
+                </div>
+              </div>
+
+              <div class="col-9 sub-menu gray-bg d-flex d-none"></div>
+              <!-- <div
                     class="col-9 assuranceInd-menu sub-menu gray-bg d-flex"
                   >
                     <div class="col-7">
@@ -417,15 +417,15 @@
                       </div>
                     </div>
                   </div> -->
-                </div>
-                <a href="insights.html" class="primary hover-cc sub-primary">
-                  E-nəşr
-                </a>
-              </nav>
             </div>
+            <a href="insights.html" class="primary hover-cc sub-primary">
+              E-nəşr
+            </a>
+            </nav>
           </div>
         </div>
       </div>
+    </div>
     </div>
   </header>
 
@@ -536,8 +536,8 @@
         <div class="col-12 col-lg-2 desk-footer">
           <div class="link-wrapper">
             <p class="title fs-2-5 fw-600">Connect</p>
-            <a href="team.html">Meet our people</a>
-            <a href="contact.html">Contact us</a>
+            <a href="team.html">Komandamız</a>
+            <a href="contact.html">Əlaqə</a>
           </div>
         </div>
         <div class="col-12 col-lg-2 desk-footer">
@@ -545,7 +545,7 @@
             <p class="title fw-600">About</p>
             <a href="./about-us.html">Haqqımızda</a>
             <!-- <a href="#">Careers</a> -->
-            <a href="insights.html">Insights</a>
+            <a href="insights.html">E-nəşr</a>
           </div>
         </div>
         <div class="col-12 col-lg-2 desk-footer">
@@ -566,8 +566,8 @@
               </div>
             </div>
             <div class="accardion-text d-flex flex-column">
-              <a href="team.html">Meet our people</a>
-              <a href="contact.html">Contact us</a>
+              <a href="team.html">Komandamız</a>
+              <a href="contact.html">Əlaqə</a>
             </div>
           </div>
         </div>
@@ -583,7 +583,7 @@
             <div class="accardion-text d-flex flex-column">
               <a href="about-us.html">About us</a>
               <!-- <a href="#">Careers</a> -->
-              <a href="insights.html">Insights</a>
+              <a href="insights.html">E-nəşr</a>
             </div>
           </div>
         </div>
@@ -618,14 +618,8 @@
           </a>
         </div>
         <div class="col-12 footer-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
-          deleniti debitis minima sapiente? Recusandae, magnam natus! Id nisi,
-          culpa fuga quasi rerum sed sunt enim aut magni voluptatibus nobis
-          nulla. Sint amet vero facilis. Asperiores iure at nihil, in
-          necessitatibus nesciunt? Iste exercitationem dignissimos,
-          praesentium perferendis accusamus facere alias accusantium, dolores
-          explicabo voluptas velit assumenda! Non cupiditate exercitationem a
-          quae.
+          © 2022 FA Audit Consulting - Bütün hüquqlar qorunur. FA Audit Consulting öz müştərilərinə audit, vergi və
+          məsləhətlər xidmətləri göstərir.
         </div>
       </div>
     </div>
