--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                           formalaşdırılmasın auditi</a>
                       </div>
                     </div>
-                    <div class="col-5 p-5 ms-5">
+                    <!-- <div class="col-5 p-5 ms-5">
                       <div class="main-card">
                         <div class="image-wrapper">
                           <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
@@ -191,7 +191,7 @@
                           </p>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                   <div class="col-9 tax-menu sub-menu gray-bg d-flex d-none">
                     <div class="col-7">
@@ -482,7 +482,7 @@
             </div>
             <div class="swiper-title">
               <h1>Sürətli, Dəqiq Hesabatlarınızı əldə edin</h1>
-              <p>Audit, Vergi, Maliyyə Hesabatınızın uçotunu bizimlə həll edin</p>
+              <!-- <p>Audit, Vergi, Maliyyə Hesabatınızın uçotunu bizimlə həll edin</p> -->
             </div>
           </div>
         </div>
@@ -585,7 +585,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                   <div class="main-card">
                     <div class="image-wrapper">
                       <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
@@ -626,7 +626,7 @@
                       </p>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="swiper-btn swiper-custom-button-next">
@@ -800,8 +800,8 @@
         <div class="col-12 col-lg-2 desk-footer">
           <div class="link-wrapper">
             <p class="title fs-2-5 fw-600">Connect</p>
-            <a href="team.html">Meet our people</a>
-            <a href="contact.html">Contact us</a>
+            <a href="team.html">Komandamız</a>
+            <a href="contact.html">Əlaqə</a>
           </div>
         </div>
         <div class="col-12 col-lg-2 desk-footer">
@@ -809,7 +809,7 @@
             <p class="title fw-600">About</p>
             <a href="./about-us.html">Haqqımızda</a>
             <!-- <a href="#">Careers</a> -->
-            <a href="insights.html">Insights</a>
+            <a href="insights.html">E-nəşr</a>
           </div>
         </div>
         <div class="col-12 col-lg-2 desk-footer">
@@ -830,8 +830,8 @@
               </div>
             </div>
             <div class="accardion-text d-flex flex-column">
-              <a href="team.html">Meet our people</a>
-              <a href="contact.html">Contact us</a>
+              <a href="team.html">Komandamız</a>
+              <a href="contact.html">Əlaqə</a>
             </div>
           </div>
         </div>
@@ -847,7 +847,7 @@
             <div class="accardion-text d-flex flex-column">
               <a href="about-us.html">About us</a>
               <!-- <a href="#">Careers</a> -->
-              <a href="insights.html">Insights</a>
+              <a href="insights.html">E-nəşr</a>
             </div>
           </div>
         </div>
