--- a/insights.html
+++ b/insights.html
@@ -480,14 +480,14 @@
                                     <div>
                                         <input type="checkbox" id="checkbox-2-1"
                                             class="regular-checkbox big-checkbox " /><label for="checkbox-2-1"></label>
-                                        <div class="tag">Checkbox Big</div>
+                                        <div class="tag">Vergi</div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div>
                                         <input type="checkbox" id="checkbox-2-2"
                                             class="regular-checkbox big-checkbox" /><label for="checkbox-2-2"></label>
-                                        <div class="tag">Checkbox Big</div>
+                                        <div class="tag">Audit</div>
                                     </div>
                                 </div>
 
@@ -495,7 +495,7 @@
                                     <div>
                                         <input type="checkbox" id="checkbox-2-3"
                                             class="regular-checkbox big-checkbox" /><label for="checkbox-2-3"></label>
-                                        <div class="tag">Checkbox Big</div>
+                                        <div class="tag">Maliyyə</div>
                                     </div>
                                 </div>
                             </div>
@@ -504,20 +504,20 @@
                                     <div>
                                         <input type="checkbox" id="checkbox-2-5"
                                             class="regular-checkbox big-checkbox " /><label for="checkbox-2-5"></label>
-                                        <div class="tag">Checkbox Big</div>
+                                        <div class="tag">Hüquq</div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div>
                                         <input type="checkbox" id="checkbox-2-6"
                                             class="regular-checkbox big-checkbox" /><label for="checkbox-2-6"></label>
-                                        <div class="tag">Checkbox Big</div>
+                                        <div class="tag">Gömrük</div>
                                     </div>
                                 </div>
 
                                 <div class="col-lg-4">
                                     <div>
-                                        <div class="tag">Checkbox Big</div>
+                                        <div class="tag">Mühasibat uçotu</div>
                                         <input type="checkbox" id="checkbox-2-7"
                                             class="regular-checkbox big-checkbox" /><label for="checkbox-2-7"></label>
 
@@ -528,21 +528,21 @@
 
                                 <div class="col-lg-4">
                                     <div>
-                                        <div class="tag">Checkbox Big</div>
+                                        <div class="tag">BHMS (IFRS)</div>
                                         <input type="checkbox" id="checkbox-2-8"
                                             class="regular-checkbox big-checkbox" /><label for="checkbox-2-8"></label>
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div>
-                                        <div class="tag">Checkbox Big</div>
+                                        <div class="tag">Biznes</div>
                                         <input type="checkbox" id="checkbox-2-9"
                                             class="regular-checkbox big-checkbox" /><label for="checkbox-2-9"></label>
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div>
-                                        <div class="tag">Checkbox Big</div>
+                                        <div class="tag">Xəbərlər</div>
                                         <input type="checkbox" id="checkbox-2-10"
                                             class="regular-checkbox big-checkbox" /><label for="checkbox-2-10"></label>
                                     </div>
@@ -716,8 +716,8 @@
                 <div class="col-12 col-lg-2 desk-footer">
                     <div class="link-wrapper">
                         <p class="title fs-2-5 fw-600">Connect</p>
-                        <a href="team.html">Meet our people</a>
-                        <a href="contact.html">Contact us</a>
+                        <a href="team.html">Komandamız</a>
+                        <a href="contact.html">Əlaqə</a>
                     </div>
                 </div>
                 <div class="col-12 col-lg-2 desk-footer">
@@ -725,7 +725,7 @@
                         <p class="title fw-600">About</p>
                         <a href="./about-us.html">Haqqımızda</a>
                         <!-- <a href="#">Careers</a> -->
-                        <a href="insights.html">Insights</a>
+                        <a href="insights.html">E-nəşr</a>
                     </div>
                 </div>
                 <div class="col-12 col-lg-2 desk-footer">
@@ -746,8 +746,8 @@
                             </div>
                         </div>
                         <div class="accardion-text d-flex flex-column">
-                            <a href="team.html">Meet our people</a>
-                            <a href="contact.html">Contact us</a>
+                            <a href="team.html">Komandamız</a>
+                            <a href="contact.html">Əlaqə</a>
                         </div>
                     </div>
                 </div>
@@ -763,7 +763,7 @@
                         <div class="accardion-text d-flex flex-column">
                             <a href="about-us.html">About us</a>
                             <!-- <a href="#">Careers</a> -->
-                            <a href="insights.html">Insights</a>
+                            <a href="insights.html">E-nəşr</a>
                         </div>
                     </div>
                 </div>
@@ -798,14 +798,9 @@
                     </a>
                 </div>
                 <div class="col-12 footer-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
-                    deleniti debitis minima sapiente? Recusandae, magnam natus! Id nisi,
-                    culpa fuga quasi rerum sed sunt enim aut magni voluptatibus nobis
-                    nulla. Sint amet vero facilis. Asperiores iure at nihil, in
-                    necessitatibus nesciunt? Iste exercitationem dignissimos,
-                    praesentium perferendis accusamus facere alias accusantium, dolores
-                    explicabo voluptas velit assumenda! Non cupiditate exercitationem a
-                    quae.
+                    © 2022 FA Audit Consulting - Bütün hüquqlar qorunur. FA Audit Consulting öz müştərilərinə audit,
+                    vergi və
+                    məsləhətlər xidmətləri göstərir.
                 </div>
             </div>
         </div>
