--- a/customers.html
+++ b/customers.html
@@ -572,8 +572,8 @@
         <div class="col-12 col-lg-2 desk-footer">
           <div class="link-wrapper">
             <p class="title fs-2-5 fw-600">Connect</p>
-            <a href="team.html">Meet our people</a>
-            <a href="contact.html">Contact us</a>
+            <a href="team.html">Komandamız</a>
+            <a href="contact.html">Əlaqə</a>
           </div>
         </div>
         <div class="col-12 col-lg-2 desk-footer">
@@ -581,7 +581,7 @@
             <p class="title fw-600">About</p>
             <a href="./about-us.html">Haqqımızda</a>
             <!-- <a href="#">Careers</a> -->
-            <a href="insights.html">Insights</a>
+            <a href="insights.html">E-nəşr</a>
           </div>
         </div>
         <div class="col-12 col-lg-2 desk-footer">
@@ -602,8 +602,8 @@
               </div>
             </div>
             <div class="accardion-text d-flex flex-column">
-              <a href="team.html">Meet our people</a>
-              <a href="contact.html">Contact us</a>
+              <a href="team.html">Komandamız</a>
+              <a href="contact.html">Əlaqə</a>
             </div>
           </div>
         </div>
@@ -619,7 +619,7 @@
             <div class="accardion-text d-flex flex-column">
               <a href="about-us.html">About us</a>
               <!-- <a href="#">Careers</a> -->
-              <a href="insights.html">Insights</a>
+              <a href="insights.html">E-nəşr</a>
             </div>
           </div>
         </div>
@@ -633,9 +633,9 @@
               </div>
             </div>
             <div class="accardion-text d-flex flex-column">
-              <a href="privacy.html">Privacy</a>
-              <a href="policy.html">Cookie policy</a>
-              <a href="disclaimer.html">Disclaimer</a>
+              <a href="#">Privacy</a>
+              <a href="#">Cookie policy</a>
+              <a href="#">Disclaimer</a>
             </div>
           </div>
         </div>
@@ -654,14 +654,8 @@
           </a>
         </div>
         <div class="col-12 footer-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
-          deleniti debitis minima sapiente? Recusandae, magnam natus! Id nisi,
-          culpa fuga quasi rerum sed sunt enim aut magni voluptatibus nobis
-          nulla. Sint amet vero facilis. Asperiores iure at nihil, in
-          necessitatibus nesciunt? Iste exercitationem dignissimos,
-          praesentium perferendis accusamus facere alias accusantium, dolores
-          explicabo voluptas velit assumenda! Non cupiditate exercitationem a
-          quae.
+          © 2022 FA Audit Consulting - Bütün hüquqlar qorunur. FA Audit Consulting öz müştərilərinə audit, vergi və
+          məsləhətlər xidmətləri göstərir.
         </div>
       </div>
     </div>
