--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                           formalaşdırılmasın auditi</a>
                       </div>
                     </div>
-                    <!-- <div class="col-5 p-5 ms-5">
+                    <div class="col-5 p-5 ms-5">
                       <div class="main-card">
                         <div class="image-wrapper">
                           <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
@@ -191,7 +191,7 @@
                           </p>
                         </div>
                       </div>
-                    </div> -->
+                    </div>
                   </div>
                   <div class="col-9 tax-menu sub-menu gray-bg d-flex d-none">
                     <div class="col-7">
@@ -447,8 +447,8 @@
                 <div class="swiper-slide">
                   <div class="text-wrapper">
                     <a href="blog-2.html" style="color: #fff;"></a>
-                    <p class="fs-3 fw-600">Mühasibat Sisteminin Təhlili 2022-ci ildə Biznesinizin Böyüməsini Necə kömək
-                      edə bilər?</p>
+                    <p class="fs-3 fw-600">Mühasibat Sisteminin Təhlili 2022-ci ildə Biznesinizə Necə kömək edə bilər?
+                    </p>
                     <p class="info">Hər bir biznes firması biznesin...</p>
                     <i class="fas fa-arrow-right"></i>
                   </div>
@@ -482,7 +482,7 @@
             </div>
             <div class="swiper-title">
               <h1>Sürətli, Dəqiq Hesabatlarınızı əldə edin</h1>
-              <!-- <p>Audit, Vergi, Maliyyə Hesabatınızın uçotunu bizimlə həll edin</p> -->
+              <p>Audit, Vergi, Maliyyə Hesabatınızın uçotunu bizimlə həll edin</p>
             </div>
           </div>
         </div>
