--- a/team.html
+++ b/team.html
@@ -438,7 +438,7 @@
           <div class="breadcrumb--title fs-2 white fw-400">Teamwork</div>
           <div class="breadcrumb--text white mt-5">Komandamız</div>
           <div class="breadcrumb--nav d-flex flex-column flex-lg-row">
-            <a href="./why-fac.html" class="white hover-cc fw-300 my-4 my-lg-0">Why FA Consulting</a>
+            <a href="./why-fac.html" class="white hover-cc fw-300 my-4 my-lg-0">Niyə biz?</a>
             <a href="./customers.html" class="white hover-cc fw-300 my-4 my-lg-0">Müştərilərimiz</a>
             <a href="./team.html" class="white hover-cc fw-300 my-4 my-lg-0">Komandamız</a>
           </div>
