--- a/about-us.html
+++ b/about-us.html
@@ -483,11 +483,13 @@
               <div class="personel-card-sub white my-3">
                 CEO
               </div>
-              <a href="seo-about-us.html">
-                <button class="btndefault btn-w border-w">
-                  Haqqında Oxu
-                </button>
-              </a>
+              <div class="mt-50">
+                <a href="seo-about-us.html">
+                  <button class="btndefault btn-w border-w">
+                    Haqqında Oxu
+                  </button>
+                </a>
+              </div>
             </div>
           </div>
           <div class="col-12 col-lg-4 px-0">
@@ -501,11 +503,13 @@
               <div class="personel-card-sub white my-3">
                 Dəyərli Müştərilərimizin siyahısı ilə tanış olun.
               </div>
-              <a href="customers.html">
-                <button class="btndefault btn-w border-w">
-                  Bizə qoşulun
-                </button>
-              </a>
+              <div class="mt-30">
+                <a href="customers.html">
+                  <button class="btndefault btn-w border-w">
+                    Bizə qoşulun
+                  </button>
+                </a>
+              </div>
             </div>
           </div>
           <div class="col-12 col-lg-4 px-0">
@@ -519,11 +523,13 @@
               <div class="personel-card-sub white my-3">
                 FA Audit Consulting insanlara inkişaf etmək imkanı verilən gənc və dinamik bir mühitdir.
               </div>
-              <a href="team.html">
-                <button class="btndefault btn-w border-w">
-                  Tanış olun
-                </button>
-              </a>
+              <div>
+                <a href="team.html">
+                  <button class="btndefault btn-w border-w">
+                    Tanış olun
+                  </button>
+                </a>
+              </div>
             </div>
           </div>
         </div>
