--- a/privacy.html
+++ b/privacy.html
@@ -483,6 +483,21 @@
                                 məlumatlarınız informasiya təhlükəsizliyi siyasətimizə uyğun olaraq təhlükəsiz şəkildə
                                 istifadə olunacaq.
                             </p>
+                            <p class="fw-600 fs-2-4 main-title my-5">
+                                Cookies
+                            </p>
+                            <p class="text fs-2 my-4">
+                                İstifadəçinin kompüterində birbaşa olaraq yerləşdirilən informasiya — Cookies
+
+                                Saytlara daxil olduğunuz zaman FA Audit Consulting istifadəçinin kompüterində müəyyən
+                                informasiyanı saxlaya bilər. Bu informasiya Cookies və yaxud buna bənzər formaya
+                                malikdir.
+                                Saytdan istifadə edərkən kukilərin istifadəsini özünüz tənzimləyə bilərsiniz. Kukiləri
+                                qəbul etmədiyiniz halda, vebsaytı daha effektiv edən bir çox xüsusiyyətləri ləğv
+                                olunacağ. Xahiş olunur, bu funksiyalar haqqında daha ətraflı məlumat almaq üçün sizin
+                                internet-brauzerdən istifadə təlimatlarına və yaxud orada quraşdırılan soraq kitabçasına
+                                müraciət edəsiniz.
+                            </p>
 
                         </div>
 
@@ -492,90 +507,7 @@
             </div>
 
         </section>
-        <section id="get-in-touch-2">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h3>Get in touch</h3>
-                        <p class="mt-5">Contact our industry professionals...</p>
-                        <button class="btndefault btn-w border-w"><a href="contact.html">go to contact form</a></button>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="create-card">
-            <div class="container">
-                <div class="d-flex justify-content-between mobile-position">
-                    <h2>Related insights</h2>
-                    <a class="btn-cont" href="#">
-                        <button class="btndefault btn-r border-w ">
-                            Fullfill your potential
-                        </button>
-                    </a>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <a href="#" target="_blank">
-                            <div class="card">
-                                <div class="card-body">
-                                    <img src="assets/img//client-1.jpg" alt="">
-                                    <div class="card-text">
-                                        <h3>LIFE SCIENCES</h3>
-                                        <h4 class="my-3">Lorem, ipsum dolor sit amet
-                                        </h4>
-                                        <span>5 Oct 2021</span>
-                                        <div class="my-3">
-                                            <a href="#">Read more <i class="fas fa-arrow-right"
-                                                    style="position: relative; top: 2px;"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4">
-                        <a href="#" target="_blank">
-                            <div class="card">
-                                <div class="card-body">
-                                    <img src="assets/img//client-1.jpg" alt="">
-                                    <div class="card-text">
-                                        <h3>LIFE SCIENCES</h3>
-                                        <h4 class="my-3">Lorem, ipsum dolor sit amet
-                                        </h4>
-                                        <span>5 Oct 2021</span>
-                                        <div class="my-3">
-                                            <a href="#">Read more <i class="fas fa-arrow-right"
-                                                    style="position: relative; top: 2px;"></i></a>
 
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4">
-                        <a href="#" target="_blank">
-                            <div class="card">
-                                <div class="card-body">
-                                    <img src="assets/img//client-1.jpg" alt="">
-                                    <div class="card-text">
-                                        <h3>LIFE SCIENCES</h3>
-                                        <h4 class="my-3">Lorem, ipsum dolor sit amet
-                                        </h4>
-                                        <span>5 Oct 2021</span>
-                                        <div class="my-3">
-                                            <a href="#">Read more <i class="fas fa-arrow-right"
-                                                    style="position: relative; top: 2px;"></i></a>
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
     </main>
 
     <footer class="primary-bg">
