--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                 <div class="swiper-slide">
                   <div class="text-wrapper">
                     <a href="blog-2.html" style="color: #fff;"></a>
-                    <p class="fs-3 fw-600">Mühasibat Sisteminin Təhlili 2022-ci ildə Biznesinizə Necə kömək edə bilər?
+                    <p class="fs-3 fw-600">Biznesin planlaşdırılmasınında mühasibat uçotunun rolu nədir?
                     </p>
                     <p class="info">Hər bir biznes firması biznesin...</p>
                     <i class="fas fa-arrow-right"></i>
@@ -482,7 +482,7 @@
             </div>
             <div class="swiper-title">
               <h1>Sürətli, Dəqiq Hesabatlarınızı əldə edin</h1>
-              <p>Audit, Vergi, Maliyyə Hesabatınızın uçotunu bizimlə həll edin</p>
+              <!-- <p>Audit, Vergi, Maliyyə Hesabatınızın uçotunu bizimlə həll edin</p> -->
             </div>
           </div>
         </div>
@@ -504,20 +504,20 @@
                 <div class="swiper-slide">
                   <div class="main-card">
                     <div class="image-wrapper">
-                      <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
+                      <img src="./assets/img/blog.jpg" alt="Formula driver" />
                     </div>
                     <div class="text-wrapper p-4">
-                      <div class="card-tag darkgray">BUSINESS RESILENCE</div>
+                      <div class="card-tag darkgray">Vergi</div>
                       <a href="insights.html">
                         <p class="fs-2 primary my-4 fw-600">
-                          Returning your business
+                          Əmək haqqının uçotu qrupunun üzləşdiyi çətinliklər hansılardır?
                         </p>
                       </a>
 
                       <br />
                       <p class="card-info mt-2">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing
-                        elit. Quis, temporibus?
+                        Əmək haqqının hesablanması ölçüsündən asılı olmayaraq hər növ müəssisənin yerinə yetirdiyi
+                        yorucu işlərdən biridir...
                       </p>
                     </div>
                   </div>
@@ -525,20 +525,19 @@
                 <div class="swiper-slide">
                   <div class="main-card">
                     <div class="image-wrapper">
-                      <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
+                      <img src="./assets/img/blog.jpg" alt="Formula driver" />
                     </div>
                     <div class="text-wrapper p-4">
-                      <div class="card-tag darkgray">BUSINESS RESILENCE</div>
+                      <div class="card-tag darkgray">Biznes</div>
                       <a href="insights.html">
                         <p class="fs-2 primary my-4 fw-600">
-                          Returning your business
+                          Mühasibat Sisteminin Təhlili 2022-ci ildə Biznesinizin Böyüməsini Necə kömək edə bilər?
                         </p>
                       </a>
 
                       <br />
                       <p class="card-info mt-2">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing
-                        elit. Quis, temporibus?
+                        Hər bir biznes firması biznesin bütün əməliyyatlarının qeydlərini saxlamaq...
                       </p>
                     </div>
                   </div>
@@ -546,20 +545,19 @@
                 <div class="swiper-slide">
                   <div class="main-card">
                     <div class="image-wrapper">
-                      <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
+                      <img src="./assets/img/blog.jpg" alt="Formula driver" />
                     </div>
                     <div class="text-wrapper p-4">
-                      <div class="card-tag darkgray">BUSINESS RESILENCE</div>
+                      <div class="card-tag darkgray">Audit</div>
                       <a href="insights.html">
                         <p class="fs-2 primary my-4 fw-600">
-                          Returning your business
+                          Auditdə analitikanın əhəmiyyəti nədir?
                         </p>
                       </a>
 
                       <br />
                       <p class="card-info mt-2">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing
-                        elit. Quis, temporibus?
+                        Audit hər bir firmanın maliyyə vəziyyətini və mühasibat hesabatlarının...
                       </p>
                     </div>
                   </div>
@@ -567,20 +565,19 @@
                 <div class="swiper-slide">
                   <div class="main-card">
                     <div class="image-wrapper">
-                      <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
+                      <img src="./assets/img/blog.jpg" alt="Formula driver" />
                     </div>
                     <div class="text-wrapper p-4">
-                      <div class="card-tag darkgray">BUSINESS RESILENCE</div>
+                      <div class="card-tag darkgray">Biznes</div>
                       <a href="insights.html">
                         <p class="fs-2 primary my-4 fw-600">
-                          Returning your business
+                          Biznesin planlaşdırılmasında və qərarların qəbul edilməsində mühasibat uçotunun rolu nədir?
                         </p>
                       </a>
 
                       <br />
                       <p class="card-info mt-2">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing
-                        elit. Quis, temporibus?
+                        Mühasibat xidmətləri istənilən biznesin ən vacib xüsusiyyətlərindən biri hesab...
                       </p>
                     </div>
                   </div>
