--- a/services-tax.html
+++ b/services-tax.html
@@ -600,7 +600,6 @@
 
     </section>
   </main>
-
   <footer class="primary-bg">
     <div class="container">
       <div class="row">
@@ -621,9 +620,9 @@
         </div>
         <div class="col-12 col-lg-2 desk-footer">
           <div class="link-wrapper">
-            <p class="title fw-600">Legal</p>
+            <p class="title fw-600">Leqal</p>
             <a href="privacy.html">Məxfilik</a>
-            <a href="policy.html">Cookie policy</a>
+            <a href="policy.html">Cookie-lər</a>
             <a href="disclaimer.html">Disclaimer</a>
           </div>
         </div>
@@ -668,9 +667,9 @@
               </div>
             </div>
             <div class="accardion-text d-flex flex-column">
-              <a href="#">Privacy</a>
-              <a href="#">Cookie policy</a>
-              <a href="#">Disclaimer</a>
+              <a href="privacy.html">Privacy</a>
+              <a href="policy.html">Cookie-lər</a>
+              <a href="disclaimer.html">Disclaimer</a>
             </div>
           </div>
         </div>
