--- a/audit-1.html
+++ b/audit-1.html
@@ -577,8 +577,9 @@
                                 Bənzər Xəbərlər
                             </div>
                             <div class="article-card d-flex flex-column my-4">
-                                <div class="darkgray fs-1-9 ls-2 my-2">Xəbərlər 1</div>
-                                <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
+                                <div class="darkgray fs-1-9 ls-2 my-2">Xəbərlər</div>
+                                <p class="fs-2 ls-2 my-3 fw-600">2022-ci ildə bankları ən çox narahat edən risk
+                                    açıqlandı</p>
                                 <a href="news.html"
                                     class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
                                     <p class="fs-2 hover-cc secondary">Davamını oxu</p>
@@ -586,8 +587,8 @@
                                 </a>
                             </div>
                             <div class="article-card d-flex flex-column my-4">
-                                <div class="darkgray fs-1-9 ls-2 my-2">Xəbərlər 2</div>
-                                <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
+                                <div class="darkgray fs-1-9 ls-2 my-2">Vergi</div>
+                                <p class="fs-2 ls-2 my-3 fw-600">Vergi Məcəlləsində edilmiş dəyişikliklər...</p>
                                 <a href="news.html"
                                     class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
                                     <p class="fs-2 hover-cc secondary">Davamını oxu</p>
@@ -595,8 +596,10 @@
                                 </a>
                             </div>
                             <div class="article-card d-flex flex-column my-4">
-                                <div class="darkgray fs-1-9 ls-2 my-2"> Xəbərlər 3</div>
-                                <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
+                                <div class="darkgray fs-1-9 ls-2 my-2">
+                                    BEYNƏLXALQ MALİYYƏ HESABATLARI...
+                                </div>
+                                <p class="fs-2 ls-2 my-3 fw-600">COVID 19: Hökumət qrantları</p>
                                 <a href="news.html"
                                     class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
                                     <p class="fs-2 hover-cc secondary">Davamını oxu</p>
@@ -631,9 +634,9 @@
                 </div>
                 <div class="col-12 col-lg-2 desk-footer">
                     <div class="link-wrapper">
-                        <p class="title fw-600">Legal</p>
+                        <p class="title fw-600">Leqal</p>
                         <a href="privacy.html">Məxfilik</a>
-                        <a href="policy.html">Cookie policy</a>
+                        <a href="policy.html">Cookie-lər</a>
                         <a href="disclaimer.html">Disclaimer</a>
                     </div>
                 </div>
@@ -678,9 +681,9 @@
                             </div>
                         </div>
                         <div class="accardion-text d-flex flex-column">
-                            <a href="#">Privacy</a>
-                            <a href="#">Cookie policy</a>
-                            <a href="#">Disclaimer</a>
+                            <a href="privacy.html">Privacy</a>
+                            <a href="policy.html">Cookie-lər</a>
+                            <a href="disclaimer.html">Disclaimer</a>
                         </div>
                     </div>
                 </div>
